[package]
name = "gepub-sys"
version = "0.1.0"
authors = ["Antoni Boucher <bouanto@zoho.com>"]
edition = "2018"
build = "build.rs"
[package.metadata.system-deps.gepub_0_6]
name = "gepub-0.6"
version = "0.6"

[package.metadata.system-deps.gepub_0_6.feature-versions]

[package.metadata.system-deps.libgepub_0_6]
name = "libgepub-0.6"
version = "0.6"

[package.metadata.system-deps.libgepub_0_6.feature-versions]
[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
libc = "0.2"
glib-sys = "0.10"
gobject-sys = "0.10"
gtk-sys = "0.10"
webkit2gtk-sys = "0.12.0"

[build-dependencies]
system-deps = "1.3"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
